--- a/.github/workflows/reusable-bootstrap.yml
+++ b/.github/workflows/reusable-bootstrap.yml
@@ -47,13 +47,19 @@ jobs:
         env:
           DOPPLER_TOKEN: ${{ secrets.DOPPLER_TOKEN }}
 
-      - name: Install sshpass
+      - name: Check for sshpass
         run: |
           if ! command -v sshpass &> /dev/null; then
-            echo "Installing sshpass..."
-            sudo apt-get update && sudo apt-get install -y sshpass
+            echo "❌ ERROR: sshpass is not installed on this runner"
+            echo ""
+            echo "Please install sshpass on your self-hosted runner:"
+            echo "  sudo apt-get update && sudo apt-get install -y sshpass"
+            echo ""
+            echo "Or configure passwordless sudo for the runner user:"
+            echo "  echo '$(whoami) ALL=(ALL) NOPASSWD:ALL' | sudo tee /etc/sudoers.d/github-runner"
+            exit 1
           else
-            echo "sshpass already installed"
+            echo "✓ sshpass is installed"
           fi
 
       - name: Bootstrap Deploy User
