feat: refactor mgmt-docker to handle complete setup independently
- Move Tailscale installation from base_setup into mgmt-docker role
- Install essential packages (curl, apt-transport-https, ca-certificates, gpg, unzip, rsyslog) in mgmt-docker
- Remove basic_auth from Loki endpoint configuration in Alloy template
- Sanitize OO_HOST in mgmt-docker defaults to strip protocol and port
- Add TS_AUTHKEY to mgmt-docker defaults
- Conditionally skip base_setup when app_role is mgmt-docker to avoid duplicate configurations

--- a/ansible/roles/mgmt-docker/defaults/main.yml
+++ b/ansible/roles/mgmt-docker/defaults/main.yml
@@ -2,10 +2,11 @@
 # Default variables for mgmt-docker role
 # These can be overridden at playbook level
 
-# Observability endpoints (should match base_setup)
-oo_host: "{{ lookup('env', 'OO_HOST') }}"
-oo_user: "{{ lookup('env', 'OO_USER') }}"
-oo_pass: "{{ lookup('env', 'OO_PASS') }}"
+# Observability endpoints
+oo_host: "{{ lookup('env', 'OO_HOST') | regex_replace('^https?://', '') | regex_replace(':[0-9]+$', '') }}"
+
+# Tailscale
+ts_authkey: "{{ lookup('env', 'TS_AUTHKEY') }}"
 
 # Target hostname for labeling
 target_hostname: "{{ inventory_hostname }}"
