--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -5,13 +5,17 @@
   vars:
     # We pull the authkey from the environment variable set in GitHub Action
     ts_authkey: "{{ lookup('env', 'TS_AUTHKEY') }}"
-    # oo_user: "{{ lookup('env', 'OO_USER') }}"
-    # oo_pass: "{{ lookup('env', 'OO_PASS') }}"
+    oo_user: "{{ lookup('env', 'OO_USER') }}"
+    oo_pass: "{{ lookup('env', 'OO_PASS') }}"
     # Sanitize OO_HOST to ensure it's just the IP/Hostname (strip http://, https://, and :port)
     oo_host: "{{ lookup('env', 'OO_HOST') | regex_replace('^https?://', '') | regex_replace(':[0-9]+$', '') }}"
   
   roles:
+    # Run base_setup only if no app_role_name, or if app_role is not mgmt-docker
+    # (mgmt-docker handles its own complete Alloy config)
     - role: base_setup
+      when: app_role_name is not defined or app_role_name == "" or app_role_name != "mgmt-docker"
+    
     # This role only runs if you pass an app_role_name from GitHub
     - role: "{{ app_role_name }}"
       when: app_role_name is defined and app_role_name != ""
