--- a/ansible/roles/mgmt-docker/tasks/main.yml
+++ b/ansible/roles/mgmt-docker/tasks/main.yml
@@ -14,18 +14,31 @@
     state: present
     update_cache: yes
 
-- name: Install Tailscale
-  shell: "curl -fsSL https://tailscale.com/install.sh | sh"
-  args:
-    creates: /usr/bin/tailscale
-
-- name: Connect to Tailscale
-  command: "tailscale up --authkey={{ ts_authkey }} --hostname={{ target_hostname }}"
-  environment:
-    TS_AUTHKEY: "{{ ts_authkey }}"
-  register: tailscale_result
-  changed_when: "'Success' in tailscale_result.stdout or tailscale_result.rc == 0"
+- name: Check if Tailscale is already configured
+  command: tailscale status --json
+  register: tailscale_status
   failed_when: false
+  changed_when: false
+
+- name: Install and configure Tailscale (if not managed by Terraform)
+  when: tailscale_status.rc != 0
+  block:
+    - name: Install Tailscale
+      shell: "curl -fsSL https://tailscale.com/install.sh | sh"
+      args:
+        creates: /usr/bin/tailscale
+
+    - name: Connect to Tailscale
+      command: "tailscale up --authkey={{ ts_authkey }} --hostname={{ target_hostname }}"
+      environment:
+        TS_AUTHKEY: "{{ ts_authkey }}"
+      register: tailscale_result
+      changed_when: "'Success' in tailscale_result.stdout or tailscale_result.rc == 0"
+      failed_when: false
+
+- name: Display Tailscale status
+  debug:
+    msg: "Tailscale is {{ 'already configured (Terraform-managed)' if tailscale_status.rc == 0 else 'newly configured (Ansible-managed)' }}"
 
 - name: Validate OO_HOST is set
   fail:
