fix:update jq command

--- a/.github/workflows/reusable-onboard.yml
+++ b/.github/workflows/reusable-onboard.yml
@@ -94,7 +94,17 @@ jobs:
           # Parse Octopus roles from comma-separated string to JSON array
           OCTOPUS_ROLES_JSON="[]"
           if [ -n "${{ inputs.octopus_roles }}" ]; then
-            OCTOPUS_ROLES_JSON=$(echo "${{ inputs.octopus_roles }}" | jq -R 'split(",") | map(select(length > 0))')
+            # Simple bash parsing - no jq needed
+            IFS=',' read -ra ROLES <<< "${{ inputs.octopus_roles }}"
+            OCTOPUS_ROLES_JSON="["
+            for i in "${!ROLES[@]}"; do
+              ROLE=$(echo "${ROLES[$i]}" | xargs)  # trim whitespace
+              if [ -n "$ROLE" ]; then
+                [ "$i" -gt 0 ] && OCTOPUS_ROLES_JSON+=","
+                OCTOPUS_ROLES_JSON+="\"$ROLE\""
+              fi
+            done
+            OCTOPUS_ROLES_JSON+="]"
           fi
           
           # Run playbook with Octopus configuration
