--- a/examples/caller-provision-lxc-docker.yml
+++ b/examples/caller-provision-lxc-docker.yml
@@ -27,6 +27,7 @@ jobs:
       
       # LXC-specific - NESTING ENABLED for Docker
       lxc_template: 'local:vztmpl/ubuntu-22.04-standard_22.04-1_amd64.tar.zst'
+      lxc_unprivileged: true  # Can run Docker with nesting
       lxc_nesting: true  # Required for Docker
       
       # Infrastructure
