feat: add environment parameter to reusable workflow with dev default
Add environment input parameter to reusable-provision.yml workflow with 'dev' as default value. Update example workflows to use quoted 'dev' value for consistency with string type parameter.

--- a/.github/workflows/reusable-provision.yml
+++ b/.github/workflows/reusable-provision.yml
@@ -47,6 +47,11 @@ on:
         description: 'VM template to clone'
         required: false
         default: 'ubuntu-2404-template'
+      environment:
+        type: string
+        description: 'Environment name (dev, staging, prod)'
+        required: false
+        default: 'dev'
       # Resource type selection
       resource_type:
         type: string
