--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -1,4 +1,10 @@
 ---
+- name: "LXC setup"
+  hosts: all
+  roles:
+    - role: lxc_setup
+      tags: lxc_setup
+
 - name: "Global Infrastructure Configuration"
   hosts: all
   become: true
